potential fix for parallax slow sleep on mobile devices

--- a/style.css
+++ b/style.css
@@ -127,7 +127,8 @@ header h1 {
     position: relative;
     background-size: cover;
 }
-#parallax-slow button {
+#parallax-slow button,
+#parallax-slow-mobile button {
     display: block;
     background-color: var(--clr-blk);
     border: none;
@@ -136,7 +137,8 @@ header h1 {
     margin: 25px auto;
     cursor: pointer;
 }
-#parallax-slow button a {
+#parallax-slow button a,
+#parallax-slow-mobile button a {
     display: block;
     color: var(--clr-white);
     font-weight: 500;
@@ -146,7 +148,7 @@ header h1 {
     padding: 15px 25px;
     margin: -15px -25px;
 }
-.mobile-only {
+#parallax-slow-mobile {
     display: none;
 }
 /*ACTIVITIES*/
@@ -404,15 +406,14 @@ footer ul li a {
         grid-template-columns: repeat(1, 1fr);
     }
     #parallax-slow {
-        background-image: none;
+        display: none;
     }
-    .mobile-only {
+    #parallax-slow-mobile {
         display: block;
-        width: 100%;
-    }
-    .mobile-only img {
-        width: 100%;
-        height: auto;
+        padding: 1rem;
+        background-image: url(./img/mountain_lake.webp);
+        position: relative;
+        background-size: cover;
     }
     .activities {
         grid-template-columns: repeat(1, 1fr);
